--- a/Ch4/nested_styles.scss
+++ b/Ch4/nested_styles.scss
@@ -4,3 +4,13 @@
  */
 
 
+ body {
+    font-family: Helvetica, Arial, sans-serif;
+    
+    p {
+        font-family:Times;
+    }
+    p#mypara {
+        font-family: "Courier New";
+    }
+}
