--- a/Ch4/var_styles.css
+++ b/Ch4/var_styles.css
@@ -14,6 +14,6 @@ h1, h2 {
   content: " with an appended string"; }
 
 h1:hover {
-  color: #333f; }
+  color: #f30d0d; }
 
 /*# sourceMappingURL=var_styles.css.map */
