--- a/Ch4/nested_styles.scss
+++ b/Ch4/nested_styles.scss
@@ -5,12 +5,12 @@
 
 
  body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Times New Roman', Arial, sans-serif;
     
     p {
         font-family:Times;
     }
-    p#mypara {
-        font-family: "Courier New";
+    p.mypara {
+        font-family: "Courier";
     }
 }
