--- a/Ch4/nested_styles.scss
+++ b/Ch4/nested_styles.scss
@@ -5,12 +5,22 @@
 
 
  body {
-    font-family: 'Times New Roman', Arial, sans-serif;
+    font-family:  Arial, sans-serif;
     
     p {
         font-family:Times;
     }
     p.mypara {
         font-family: "Courier";
+    }
+}
+
+header {
+    color: #404040;
+    border: 1px solid #404040;
+    padding: 10px;
+    
+    &:hover {
+        color: rgb(109, 35, 194);
     }
 }
