--- a/Ch4/nested_styles.scss
+++ b/Ch4/nested_styles.scss
@@ -16,6 +16,10 @@
 }
 
 header {
+    h1 { font-size: 3em }
+    h2 {font-size: 2.5em}
+    h3 {font-family: times; font-size: 4em}
+    h4 {color: red}
     color: #404040;
     border: 1px solid #404040;
     padding: 10px;
