--- a/Ch4/ops_styles.css
+++ b/Ch4/ops_styles.css
@@ -1,5 +1,9 @@
 /*
  * SASS Operators example
  */
+.list1 {
+  color: #6f00ff;
+  border: 4px solid #6f00ff;
+  padding: 10px; }
 
 /*# sourceMappingURL=ops_styles.css.map */
