--- a/Ch5/funcs_styles.css
+++ b/Ch5/funcs_styles.css
@@ -14,4 +14,8 @@ h3 {
 h4 {
   color: #d0ff4d; }
 
+.mypara {
+  color: #394d00;
+  background-color: #bfbfbf; }
+
 /*# sourceMappingURL=funcs_styles.css.map */
