--- a/Ch5/funcs_styles.scss
+++ b/Ch5/funcs_styles.scss
@@ -16,3 +16,7 @@
  h4 {
      color: lighten($color, 40%);
  }
+ .mypara {
+     color: darken($color,10%);
+     background-color: grayscale(invert($color));
+ }
