--- a/Ch5/import_me.scss
+++ b/Ch5/import_me.scss
@@ -3,10 +3,10 @@
  * and can have different kinds of data types: color, string, boolean, multi-value
  */
 
-$myColor1: navy;                            // named color value
-$myColor2: #000080;                         // hex color value
+$myColor1: #803e00;                            // named color value
+$myColor2: #078632;                         // hex color value
 $myStringVar: " with an appended string";   // string variable 
-$myFontSize: 18px;                          // numeric value
-$thinBorder: 1px solid $myColor1;           // multi-value variable
+$myFontSize: 22px;                          // numeric value
+$thinBorder: 1em dotted $myColor2;           // multi-value variable
 $paddingVar: 15px 15px 15px 15px;           // multi-value variable
 
